Update styling to prevent page shifting on load.

--- a/styleguide/source/assets/scss/03-organisms/_membership.scss
+++ b/styleguide/source/assets/scss/03-organisms/_membership.scss
@@ -299,16 +299,14 @@ a.ama__membership {
 .ama__category .layout__region--content .layout--ama-page-section-one-col .ama__membership {
     display: flex;
     flex-direction: column-reverse;
-    column-gap: 120px;
     border-bottom: 0.5px solid #000;
     padding-bottom: 28px;
     margin-bottom: 28px;
+    width: 100%;
     @include breakpoint($bp-small) {
       flex-direction: row;
-      column-gap: 17px;
     }
     @include breakpoint($bp-med) {
-      column-gap: 120px;
       padding-bottom: 56px;
       margin-top: 56px;
       margin-bottom: 41px;
@@ -374,6 +372,12 @@ a.ama__membership {
       max-width: 680px;
       padding: 0;
       margin: 0;
+      @include breakpoint($bp-small) {
+        margin-left: 17px;
+      }
+      @include breakpoint($bp-med) {
+        margin-left: 120px;
+      }  
     }
 }
 
